--- a/Zef-Blog-backend/package.json
+++ b/Zef-Blog-backend/package.json
@@ -16,15 +16,23 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.5",
+    "express-xss-sanitizer": "^1.1.6",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "joi": "^17.11.0",
+    "joi-password-complexity": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
